--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -45,7 +45,7 @@
     </main>
 
     <footer>
-      <p>Version 1.1.0</p>
+      <p>Version <span id="version"></span></p>
     </footer>
   </div>
   <script src="popup.js"></script>
