--- a/src/options/options.html
+++ b/src/options/options.html
@@ -160,7 +160,7 @@
                     <label for="rule-action">Action</label>
                     <select id="rule-action">
                         <option value="hide">Hide Post</option>
-                        <option value="see_first">See First</option>
+                        <option value="highlight">Highlight</option>
                     </select>
                 </div>
                 <div class="conditions-section">
