feat: Add 'Reorder Highlights' button to popup and introduce tests for negative operators.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -38,6 +38,9 @@
         <button id="add-rule-btn" class="btn btn-primary">
           <span class="icon">+</span> Quick Add Rule
         </button>
+        <button id="reorder-btn" class="btn btn-secondary">
+          <span class="icon">🔃</span> Reorder Highlights
+        </button>
         <button id="open-options-btn" class="btn btn-secondary">
           Manage Rules
         </button>
