feat: Redesign highlight display with a distinct 4px border, a full-width banner prepended to content, and hide the reorder button in the popup.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -38,7 +38,7 @@
         <button id="add-rule-btn" class="btn btn-primary">
           <span class="icon">+</span> Quick Add Rule
         </button>
-        <button id="reorder-btn" class="btn btn-secondary">
+        <button id="reorder-btn" class="btn btn-secondary" style="display: none;">
           <span class="icon">🔃</span> Reorder Highlights
         </button>
         <button id="open-options-btn" class="btn btn-secondary">
