feat: add see first (highlight feature) (#2)
* feat: Add 'See First' rule action, refactor rule engine, and expand rule evaluation tests.

* feat: Add case-sensitive string matching operators and expand test coverage with new unit and E2E test suites.

* Fix: Rename see-first classes to highlight in CSS and implement negative operators

* feat: Add 'Reorder Highlights' button to popup and introduce tests for negative operators.

* feat: Redesign highlight display with a distinct 4px border, a full-width banner prepended to content, and hide the reorder button in the popup.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -22,7 +22,7 @@
                 <button class="nav-item" data-tab="stats">Statistics</button>
             </nav>
             <div class="sidebar-footer">
-                <p>v1.1.0</p>
+                <p>v1.2.1</p>
             </div>
         </aside>
 
@@ -160,7 +160,7 @@
                     <label for="rule-action">Action</label>
                     <select id="rule-action">
                         <option value="hide">Hide Post</option>
-                        <option value="highlight">Highlight Post</option>
+                        <option value="highlight">Highlight</option>
                     </select>
                 </div>
                 <div class="conditions-section">
