--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -38,6 +38,9 @@
         <button id="add-rule-btn" class="btn btn-primary">
           <span class="icon">+</span> Quick Add Rule
         </button>
+        <button id="reorder-btn" class="btn btn-secondary" style="display: none;">
+          <span class="icon">🔃</span> Reorder Highlights
+        </button>
         <button id="open-options-btn" class="btn btn-secondary">
           Manage Rules
         </button>
@@ -45,7 +48,7 @@
     </main>
 
     <footer>
-      <p>Version 1.1.0</p>
+      <p>Version <span id="version"></span></p>
     </footer>
   </div>
   <script src="popup.js"></script>
